; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/wireless/broadcom/brcm80211/brcmfmac/extr_sdio.c_brcmf_sdio_watchdog.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/wireless/broadcom/brcm80211/brcmfmac/extr_sdio.c_brcmf_sdio_watchdog.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.brcmf_sdio = type { i32, i64, i32, i64 }
%struct.timer_list = type { i32 }

@timer = common dso_local global i32 0, align 4
@jiffies = common dso_local global i64 0, align 8
@BRCMF_WD_POLL = common dso_local global i64 0, align 8
@bus = common dso_local global %struct.brcmf_sdio* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.timer_list*)* @brcmf_sdio_watchdog to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @brcmf_sdio_watchdog(%struct.timer_list* %0) #0 {
  %2 = alloca %struct.timer_list*, align 8
  %3 = alloca %struct.brcmf_sdio*, align 8
  store %struct.timer_list* %0, %struct.timer_list** %2, align 8
  %4 = load %struct.brcmf_sdio*, %struct.brcmf_sdio** %3, align 8
  %5 = ptrtoint %struct.brcmf_sdio* %4 to i32
  %6 = load %struct.timer_list*, %struct.timer_list** %2, align 8
  %7 = load i32, i32* @timer, align 4
  %8 = call %struct.brcmf_sdio* @from_timer(i32 %5, %struct.timer_list* %6, i32 %7)
  store %struct.brcmf_sdio* %8, %struct.brcmf_sdio** %3, align 8
  %9 = load %struct.brcmf_sdio*, %struct.brcmf_sdio** %3, align 8
  %10 = getelementptr inbounds %struct.brcmf_sdio, %struct.brcmf_sdio* %9, i32 0, i32 3
  %11 = load i64, i64* %10, align 8
  %12 = icmp ne i64 %11, 0
  br i1 %12, label %13, label %29

13:                                               ; preds = %1
  %14 = load %struct.brcmf_sdio*, %struct.brcmf_sdio** %3, align 8
  %15 = getelementptr inbounds %struct.brcmf_sdio, %struct.brcmf_sdio* %14, i32 0, i32 2
  %16 = call i32 @complete(i32* %15)
  %17 = load %struct.brcmf_sdio*, %struct.brcmf_sdio** %3, align 8
  %18 = getelementptr inbounds %struct.brcmf_sdio, %struct.brcmf_sdio* %17, i32 0, i32 1
  %19 = load i64, i64* %18, align 8
  %20 = icmp ne i64 %19, 0
  br i1 %20, label %21, label %28

21:                                               ; preds = %13
  %22 = load %struct.brcmf_sdio*, %struct.brcmf_sdio** %3, align 8
  %23 = getelementptr inbounds %struct.brcmf_sdio, %struct.brcmf_sdio* %22, i32 0, i32 0
  %24 = load i64, i64* @jiffies, align 8
  %25 = load i64, i64* @BRCMF_WD_POLL, align 8
  %26 = add nsw i64 %24, %25
  %27 = call i32 @mod_timer(i32* %23, i64 %26)
  br label %28

28:                                               ; preds = %21, %13
  br label %29

29:                                               ; preds = %28, %1
  ret void
}

declare dso_local %struct.brcmf_sdio* @from_timer(i32, %struct.timer_list*, i32) #1

declare dso_local i32 @complete(i32*) #1

declare dso_local i32 @mod_timer(i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
